Fix footer margin on mobile screen

--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -138,6 +138,11 @@ footer .icon {
     footer {
         padding: 0;
         justify-content: center;
-        margin-top: 18rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    footer {
+        margin-top: 20rem;
     }
 }
